--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -57,5 +57,14 @@
   "no_matching_countries": "일치하는 국가가 없습니다",
   "automatic": "모든 항공권에 추가 비용 없이 자동 보호가 포함됩니다.",
   "cost":"가격",
-  "mode":"모드"
+  "mode":"테마 설정",
+  "login_in": "로그인",
+  "email_addr": "이메일 주소",
+  "create_account": "계정 만들기",
+  "please_enter_email": "올바른 이메일 주소를 입력하세요.",
+  "password": "비밀번호",
+  "password_must_be": "비밀번호는 최소 6자 이상이어야 합니다.",
+  "login": "로그인",
+  "sign_up": "회원가입",
+  "i_already": "이미 계정이 있습니다"
 }
